NJU-ProjectN/nvboard master initialized without tracing
NJU-ProjectN/nvboard a48416ef8179faa6e40df1355cd9c613af8382f6 fix compile error with clang in MacOS

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -4,5 +4,19 @@ all:
 sim:
 	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
 	@echo "Write this Makefile by your self."
+	@echo
+	@echo "-- VERILATE-----------------"
+	verilator -cc --exe --build -Wall --trace-fst --timing  vsrc/testbench.v vsrc/switch.v csrc/sim_main.cpp
 
+	@echo
+	@echo "-- RUN--------------------"
+	@rm -rf logs
+	@mkdir -p logs
+	obj_dir/Vtestbench +trace
+
+	@echo
+	@echo "-- DONE ------------------"
+	@echo "Waveforms dumped in logs/"
+	@echo
+ 
 include ../Makefile
