--- a/nemu/Makefile
+++ b/nemu/Makefile
@@ -59,3 +59,8 @@ else
 # Include rules to build NEMU
 include $(NEMU_HOME)/scripts/native.mk
 endif
+
+count : 
+	find -name "*.c" -o -name "*.h" | xargs cat | grep "." | wc -l
+
+
