buggy version implemented B inst.

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -58,7 +58,7 @@ MYCXXFLAGS= $(shell llvm-config --cxxflags) -fPIE -g -fpermissive
 NEW_CXXFLAGS= $(foreach flag,$(MYCXXFLAGS), -CFLAGS $(flag))
 
 run:
-	$(VERILATOR) --cc --exe --build -j 0 -Wall -timing --trace-fst $(NEW_LDFLAGS) $(NEW_CXXFLAGS)  $(CXXSRC)  vsrc/$(TOPNAME).v $(VSRC) --Mdir build/ --top-module $(TOPNAME)
+	$(VERILATOR) --public --cc --exe --build -j 0 -Wall -timing --trace-fst  $(NEW_LDFLAGS) $(NEW_CXXFLAGS)  $(CXXSRC)  vsrc/$(TOPNAME).v $(VSRC) --Mdir build/ --top-module $(TOPNAME)
 	./build/Vtop  --log=$(BUILD_DIR)/npc-log.txt --diff=ref/riscv32-nemu-interpreter-so $(ARGS) $(IMG) 
  
 clean:
