--- a/npc/Makefile
+++ b/npc/Makefile
@@ -57,8 +57,16 @@ IMG:=
 MYCXXFLAGS= $(shell llvm-config --cxxflags) -fPIE -g -fpermissive
 NEW_CXXFLAGS= $(foreach flag,$(MYCXXFLAGS), -CFLAGS $(flag))
 
+TRACEFLAG:=  
+
+WAVETRACE=0
+ifeq ($(WAVETRACE), 1)
+	TRACEFLAG= --trace-fst
+endif
+
+
 run:
-	$(VERILATOR) --public --cc --exe --build -j 0 -Wall -timing --trace-fst  $(NEW_LDFLAGS) $(NEW_CXXFLAGS)  $(CXXSRC)  vsrc/$(TOPNAME).v $(VSRC) --Mdir build/ --top-module $(TOPNAME)
+	$(VERILATOR) --public --cc --exe --build -j 0 -Wall -timing  $(TRACEFLAG) $(NEW_LDFLAGS) $(NEW_CXXFLAGS)  $(CXXSRC)  vsrc/$(TOPNAME).v $(VSRC) --Mdir build/ --top-module $(TOPNAME)
 	./build/Vtop  --log=$(BUILD_DIR)/npc-log.txt --diff=ref/riscv32-nemu-interpreter-so $(ARGS) $(IMG) 
  
 clean:
