--- a/npc/Makefile
+++ b/npc/Makefile
@@ -87,6 +87,7 @@ endif
 TOP_PATH= $(SOC_HOME)/build
 
 MROM ?= ../mykernel/build/char-test.bin
+FLASH ?= ../mykernel/build/char-test.bin
 
 ARGS ?=
 LOGFILE ?= $(BUILD_DIR)/npc-log.txt
@@ -95,11 +96,16 @@ ifeq ($(BATCH),1)
 	ARGS += -b
 endif
 
+
 run:
 	$(VERILATOR) --public --cc --exe --build --prefix VDUT -j 0 $(VERILATOR_FLAGS) $(TRACEFLAG) $(NEW_LDFLAGS) $(INCFLAGS) $(NEW_CXXFLAGS)  $(CXXSRC)  $(TOP_PATH)/$(TOPNAME).v $(VSRC) --Mdir build/ --top-module $(TOPNAME)
-	echo " VALUE OF BATCH = " $(BATCH)
-	./build/VDUT $(ARGS) --log=$(LOGFILE) --diff=ref/riscv32-nemu-interpreter-so --mrom=$(MROM)   $(IMG) 
+	./build/VDUT $(ARGS) --log=$(LOGFILE) --diff=ref/riscv32-nemu-interpreter-so  --flash=$(FLASH)  
  
+debug:
+	$(VERILATOR) --public --cc --exe --build --prefix VDUT -j 0 $(VERILATOR_FLAGS) $(TRACEFLAG) $(NEW_LDFLAGS) --LDFLAGS "-g" \
+		$(INCFLAGS) $(NEW_CXXFLAGS) --CFLAGS "-g -O0"  $(CXXSRC)  $(TOP_PATH)/$(TOPNAME).v $(VSRC) --Mdir build/ --top-module $(TOPNAME)
+	gdb --args ./build/VDUT  --flash=$(FLASH)  
+
 clean:
 	rm -r build/
 include ../Makefile
